Typo on the KYC fail x3 kickout screen.

--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-NEW-RULES.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-NEW-RULES.html
@@ -58,7 +58,7 @@
 
                     <!-- CONTENT FOR FOLLOW MANUAL PAYMENT PLAN -->
                 
-                    <p>If you want spread the cost of your PCN, you can make regular manual payments using this service.</p>
+                    <p>If you want to spread the cost of your PCN, you can make regular manual payments using this service.</p>
                     
                     {% if data.secondPayment === 'true' %}
                         {% set paymentPlanRows = 50 | generatePaymentPlanRows( 3, 12, 1 ) %}
