--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED.html
@@ -54,7 +54,7 @@
 
                     <!-- CONTENT FOR MAKE MANUAL PAYMENTS EVERY MONTH -->
                 
-                    <p class="nhsuk-body">If you want spread the cost of your Penalty Charge Notice over several payments, you can make regular manual payments.</p>
+                    <p class="nhsuk-body">If you want to spread the cost of your Penalty Charge Notice over several payments, you can make regular manual payments.</p>
                     <p class="nhsuk-body">You will need to make your first payment within 28 days (by {{ 28 | alterTodaysDateByNumberOfDays }}). You then need to continue to make payments every month until you have paid the Penalty Charge Notice in full.</p>
                     <p class="nhsuk-body">Payments can be as much as you like, but we suggest a payment each month of £16.67. This will mean you will pay your Penalty Charge Notice in full within 3 months.</p>
 
