--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-NO-DATES.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-NO-DATES.html
@@ -47,7 +47,7 @@
 
                     <!-- CONTENT FOR MAKE MANUAL PAYMENTS EVERY MONTH -->
                 
-                    <p class="nhsuk-body">If you want spread the cost of your Penalty Charge Notice over several payments, you can make regular manual payments.</p>
+                    <p class="nhsuk-body">If you want to spread the cost of your Penalty Charge Notice over several payments, you can make regular manual payments.</p>
                     <p class="nhsuk-body">You'll need to make your first payment by {{ 31 | alterTodaysDateByNumberOfDays }}. You then need to continue to make payments every 31 days until you have paid the Penalty Charge Notice in full.</p>
 
                     <!--<p class="nhsuk-body">Payments can be as much as you like, but we suggest a payment each month of £16.67. This will mean you will pay your Penalty Charge Notice in full within 3 months.</p>-->
