Adding in a UR route for Expedite a PCN.

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -111,6 +111,10 @@
       attributes: attributes,
       links: [
         {
+          URL: "/prototype-admin/reset?returnPage=" + (currentPage | urlencode),
+          label: "Reset data"
+        },
+        {
           URL: 'https://www.nhsbsa.nhs.uk/accessibility-statement-respond-your-letter',
           label: 'Accessibility'
         },
