--- a/app/views/v5-enquiry/respond-to-your-letter.html
+++ b/app/views/v5-enquiry/respond-to-your-letter.html
@@ -12,9 +12,7 @@ Respond to your letter
   <div class="nhsuk-grid-column-two-thirds">
 
 
-    <h1>
-      Respond to your letter
-    </h1>
+    <h1>Respond to your letter</h1>
 
     <p>Use this service to:</p>
     <ul>
@@ -24,7 +22,7 @@ Respond to your letter
     </ul>
     <h2 class="nhsuk-heading-l">Before you start</h2>
     <p>You will need your reference number. You can find this on your letter.</p>
-    <p> <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have lost your letter</a>.
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have lost your letter</a>.
     </p>
     <p>If you were entitled to help with your health costs it may help to have your exemption certificate or benefits
       information ready.</p>
