--- a/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2-b.html
+++ b/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2-b.html
@@ -2,6 +2,11 @@
 
 {% set title = 'Review your penalty charge' %}
 
+{% set freeStuff = 'free NHS prescriptions' %}
+{% if data.settings[version].type === 'decs' %}
+  {% set freeStuff = 'free or reduced cost NHS dental treatment' %}
+{% endif %}
+
 {% block pageTitle %}
     {{ title }}
 {% endblock %}
@@ -25,6 +30,22 @@
 
     <h1 class="nhsuk-heading-l">{{ title }}</h1>
 
+
+    {% set errorMessageText = 'Select that you confirm and accept your penalty charge' %}
+
+    {% if data.showErrors === 'true' %}
+        {{ errorSummary({
+        titleText: 'There is a problem',
+        errorList: [
+                {
+                    text: errorMessageText,
+                    href: '#acceptPCNDeclarationB-1'
+                }
+            ]
+        }) }}
+    {% endif %}
+
+
     {{ warningCallout({
         heading: 'Important information',
         HTML: '<p>If you accept your penalty charge today, you must make a payment or set up a Direct Debit within 31 days. If you do not, an extra surcharge of up to £50 may be added to these charges.</p>'
@@ -37,6 +58,32 @@
 
             <h3 class="nhsuk-heading-m">Penalty Charge Notice amount</h3>
 
+            {% if data.settings[version].type === 'decs' %}
+
+                <!-- DECS -->
+                {% set summaryListRows = [
+                    {
+                      key: { text: 'Dental treatment charges' },
+                      value: { text: '£75.30' }
+                    },
+                    {
+                      key: { text: 'Penalty charge' },
+                      value: { text: '£50.00' }
+                    },
+                    {
+                      key: { text: 'Total amount to pay' },
+                      value: { html: '<strong>£125.30</strong>' }
+                }]%} 
+
+                {{ summaryList({
+                    rows: summaryListRows
+                }) }}
+
+                <p class="nhsuk-heading-l nhsuk-u-margin-bottom-0">Amount to pay: £125.30</p>
+
+            {% else %}
+
+                <!-- PECS -->
                 {% set summaryListRows = [
                     {
                       key: { text: 'Prescription charges' },
@@ -51,39 +98,46 @@
                       value: { html: '<strong>£59.90</strong>' }
                 }]%} 
 
-
-
                 {{ summaryList({
                     rows: summaryListRows
                 }) }}
 
                 <p class="nhsuk-heading-l nhsuk-u-margin-bottom-0">Amount to pay: £59.90</p>
 
+            {% endif%}
+
             </div>
         </div>
 
 
-        <form action="accept-pcn-EXPEDITE-v2" method="post" novalidate>
+        <form action="accept-pcn-EXPEDITE-v2-b" method="post" novalidate>
 
 
             <h2 class="nhsuk-heading-m">Do not accept the penalty charge</h2>
 
-            <p>You now have 28 days to confirm you were entitled to free NHS prescriptions (by {{ 28 | alterTodaysDateByNumberOfDays }}). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
+            <p>You now have 28 days to confirm you were entitled to {{ freeStuff }} (by {{ 28 | alterTodaysDateByNumberOfDays }}). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
             <p><a class="nhsuk-link" href="enquiry-letter-details">Check the details on your enquiry letter</a></p>
-            <p>If you do not confirm you were entitled to free NHS prescriptions we will send a Penalty Charge Notice.</p>
+            <p>If you do not confirm you were entitled to {{ freeStuff }} we will send a Penalty Charge Notice.</p>
 
 
             <h2 class="nhsuk-heading-m">Accept the penalty charge</h2>
 
             <p>If you accept the penalty charge today you confirm that you:</p>
             <ul class="nhsuk-list nhsuk-list--bullet">
-                <li>were not entitled to free NHS prescriptions</li>
+                <li>were not entitled to {{ freeStuff }}</li>
                 <li>understand that you must make a payment or set up a Direct Debit within 31 days</li>
             </ul>
 
+            {% set errorMessage = '' %}
+            {% if data.showErrors === 'true' %}
+                {% set errorMessage = { text: errorMessageText } %}
+            {% endif %}
+
             {{ checkboxes({
-                idPrefix: 'acceptPCNDeclaration',
-                name: 'acceptPCNDeclaration',
+                idPrefix: 'acceptPCNDeclarationB',
+                name: 'acceptPCNDeclarationB',
+                id: 'acceptPCNDeclarationB',
+                errorMessage: errorMessage,
                 fieldset: {
                 legend: {
                     text: 'Tick the box if you accept the following statements',
