--- a/app/views/v5-enquiry/enquiry-letter-details-decs-EXPEDITE.html
+++ b/app/views/v5-enquiry/enquiry-letter-details-decs-EXPEDITE.html
@@ -4,9 +4,6 @@
 Enquiry letter
 {% endblock %}
 
-
-
-
 {% block content %}
 
 
@@ -24,16 +21,16 @@ Enquiry letter
             Do not delay
           </span>
         </h3>
-        <p>You now have 28 days to confirm you were entitled to free NHS prescriptions (by {{ 28 | alterTodaysDateByNumberOfDays }}). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
+        <p>You now have 28 days to confirm you were entitled to free or reduced cost NHS dental treatment (by {{ 28 | alterTodaysDateByNumberOfDays }}). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
       </div>
      
     
        <h2>Check your details carefully</h2>
 
-       <p>We check details on your prescription match the details on your exemption certificate, qualifying benefit, or prepayment certificate.</p>
-      <p>We have not been able to confirm you were entitled to free NHS prescriptions using these details.</p>
+       <p>We check details from on your dental treatment form and check these against match the details on your exemption certificate or qualifying benefit.</p>
+      <p>We have not been able to confirm you were entitled to free or reduced cost NHS dental treatment using these details.</p>
      
-      <h3>Details on the prescription</h3>
+      <h3>Details on the dental treatment form</h3>
       <dl class="nhsuk-summary-list">
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
@@ -60,14 +57,14 @@ Enquiry letter
             Exemption reason ticked
           </dt>
           <dd class="nhsuk-summary-list__value">
-            <p>Gets Income Support or income-related Employment and Support Allowance.</p>
+            <p>Gets Universal credit</p>
             
           </dd>
       
         </div>
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
-            Date prescription was claimed
+            Date dental treatment was claimed
           </dt>
           <dd class="nhsuk-summary-list__value">
             {{ -1 | getClaimDateRange }}
@@ -76,7 +73,7 @@ Enquiry letter
         </div>
         
       </dl>
-      <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this issue. We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.</p>
+      <p>If you were entitled to free or reduced cost NHS dental treatment, answering some questions to confirm this can help us resolve this issue. We can check if you had a valid exemption certificate or qualifying benefit.</p>
       </dl>
     </div>
    
