--- a/app/views/v5-enquiry/enter-postcode.html
+++ b/app/views/v5-enquiry/enter-postcode.html
@@ -2,12 +2,13 @@
 
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
-{% block pageTitle %}
-Enter your postcode as shown on your letter
-{% endblock %}
+{% block pageTitle %}Enter your postcode as shown on your letter{% endblock %}
 
-{% block outerContent %}
-
+{% block beforeContent %}
+  {{ backLink({
+    href: 'javascript:history.back();',
+    text: 'Go back'
+  }) }}
 {% endblock %}
 
 {% block content %}
@@ -16,7 +17,11 @@ Enter your postcode as shown on your letter
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="v4-postcode-input" method="get" class="form">
+    {% if data.settings[version].allowExpedite === 'true' %}
+      <form action="enter-postcode" method="post" novalidate>
+    {% else %}
+      <form action="v4-postcode-input" method="get" class="form">
+    {% endif %}
 
       <span class="nhsuk-caption-m">Your details</span>
       <h1 class="nhsuk-heading-l">Enter your postcode as shown on your letter</h1>
