Fixing the missing postcode page in the v5-enquiry flow.

--- a/app/views/v5-enquiry/pcn-accepted-EXPEDITE-v2.html
+++ b/app/views/v5-enquiry/pcn-accepted-EXPEDITE-v2.html
@@ -15,7 +15,7 @@
                 We’ll send you a letter with the details of your Penalty Charge Notice
                 <dl>
                     <div>
-                        <dd class="nhsuk-body nhsuk-u-margin-0">Reference number:</dd>
+                        <dd class="nhsuk-body nhsuk-u-margin-0">Reference number</dd>
                         <dt class="nhsuk-heading-l">01234567890</dt>
                     </div>
                 </dl>',
