--- a/app/views/v5-enquiry/date-of-birth.html
+++ b/app/views/v5-enquiry/date-of-birth.html
@@ -17,7 +17,7 @@ What is your date of birth?
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="enter-postcode" method="post" class="form">
+    <form action="date-of-birth" method="post" class="form">
 
       <span class="nhsuk-caption-m">Your details</span>
       <h1 class="nhsuk-heading-l">What is your date of birth?</h1>
