--- a/app/views/v6-pcn/confirm-direct-debit.html
+++ b/app/views/v6-pcn/confirm-direct-debit.html
@@ -123,6 +123,8 @@ Confirm and submit your Direct Debit
         </div>
       </div>
 
+	  <p class="nhsuk-body nhsuk-body-s nhsuk-u-margin-bottom-6">After you select continue, we'll contact your bank. This can take up to 30 seconds, so please do not leave this page while we do this.</p>
+
       <a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="dd-confirmed">
         Continue
       </a>
