Adding the Please wait message to DECS and v7.

--- a/app/views/v6-pcn-decs/confirm-direct-debit.html
+++ b/app/views/v6-pcn-decs/confirm-direct-debit.html
@@ -158,6 +158,10 @@ Confirm and submit your Direct Debit
           </label>
         </div>
 
+
+	  <p class="nhsuk-body nhsuk-body-s nhsuk-u-margin-bottom-6">After you select continue, we'll contact your bank. This can take up to 30 seconds, so please do not leave this page while we do this.</p>
+
+
       </div>
             <a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="dd-confirmed">
         Continue
