--- a/app/views/v7-temp/dd-confirm.html
+++ b/app/views/v7-temp/dd-confirm.html
@@ -135,6 +135,10 @@ text: "Go back"
 			}) }}
 		</form>
 
+
+	  <p class="nhsuk-body nhsuk-body-s nhsuk-u-margin-bottom-6">After you select continue, we'll contact your bank. This can take up to 30 seconds, so please do not leave this page while we do this.</p>
+
+
 		{{ button({
 		text: 'Continue'
 		}) }}
