--- a/app/views/v7/what-you-want-to-do-next.html
+++ b/app/views/v7/what-you-want-to-do-next.html
@@ -50,6 +50,31 @@ text: "Go back"
 
 
       {% else %}
+      {% if data.type === 'decs' && if data.letter === 'pcn'%}
+
+      {% set radioItems = [
+      {
+      value: 'confirm-entitled',
+      text: 'Confirm I was entitled to free NHS prescripitons',
+      hint: {
+      text: "We'll check if you were getting a qualifying benefit, or had a valid exemption or prepayment certificate."
+      }
+      },
+      {
+      value: 'pay-pcn',
+      text: 'I was not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice'
+      },
+      {
+      divider: 'or'
+      },
+      {
+      value: 'not-sure',
+      text: "I'm not sure if I was entitled to free NHS prescriptions and want to check"
+      }
+      ]
+      %}
+
+      {% else %}
 
       {% set radioItems = [
       {
