Changing the size of the heading on the warning callout.

--- a/app/views/v5-enquiry/pcn-accepted-EXPEDITE-v3.html
+++ b/app/views/v5-enquiry/pcn-accepted-EXPEDITE-v3.html
@@ -80,7 +80,7 @@
 
                 {{ warningCallout({
                     heading: 'Please note',
-                    classes: 'nhsuk-u-margin-bottom-0',
+                    classes: 'nhsuk-u-margin-bottom-0 smaller-heading',
                     HTML: '<p>If you pay today, you will still receive a letter. This is for your records, and will not represent an additional penalty charge.</p>'
                 }) }}
 
