--- a/app/views/v5-enquiry/pcn-accepted-EXPEDITE-v3.html
+++ b/app/views/v5-enquiry/pcn-accepted-EXPEDITE-v3.html
@@ -111,7 +111,7 @@
 
         <p>You will need to keep a record of your Penalty Charge Notice reference number to make a payment.</p>
 
-        <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" class="nhsuk-link--no-visited-state">Find out about call charges and other ways to contact us on our website</a></p>
+        <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank" class="nhsuk-link--no-visited-state">Find out about call charges and other ways to contact us on our website (opens in a new tab)</a></p>
 
 
         
