--- a/app/views/v5-enquiry/accept-pcn-EXPEDITE-v3.html
+++ b/app/views/v5-enquiry/accept-pcn-EXPEDITE-v3.html
@@ -153,6 +153,32 @@
                 ]
             }) }}
 
+
+            {% if data.showEmailInput === 'true' %}
+
+                <hr class="nhsuk-section-break nhsuk-section-break--visible nhsuk-section-break--m" />
+
+                {{ input({
+                    label: {
+                        text: 'What is your email address? (optional)',
+                        classes: 'nhsuk-label--s'
+                    },
+                    hint: {
+                        text: 'We will use this to send you notifications and reminders about your case.'
+                    },
+                    inputmode: 'email',
+                    id: 'emailAddress',
+                    name: 'emailAddress',
+                    value: data.emailAddress,
+                    classes: 'nhsuk-input--width-20'
+                }) }}
+
+                <hr class="nhsuk-section-break nhsuk-section-break--m" />
+
+            {% endif %}
+
+
+
             {{ button({
                 text: 'Accept penalty charge'
             }) }}
