Adding the email flow to enquiry v5

--- a/app/views/v5-enquiry/email-EXPEDITE-v3.html
+++ b/app/views/v5-enquiry/email-EXPEDITE-v3.html
@@ -16,6 +16,7 @@
         
         <form action="email-EXPEDITE-v3" method="post" novalidate>
 
+            <span class="nhsuk-caption-m">Your details</span>
             {{ input({
                 label: {
                     text: 'What is your email address?',
