--- a/app/views/v5-enquiry/email-choice-EXPEDITE-v3.html
+++ b/app/views/v5-enquiry/email-choice-EXPEDITE-v3.html
@@ -16,6 +16,7 @@
         
         <form action="email-choice-EXPEDITE-v3" method="post" novalidate>
 
+            <span class="nhsuk-caption-m">Your details</span>
             {% set yesHTML %}
 
                     <!-- YES HTML -->
@@ -25,7 +26,7 @@
                         hint: {
                             text: 'We will use this to send you notifications about your case.'
                         },
-                        value: data.email,
+                        value: data.emailAddress,
                         classes: 'nhsuk-u-width-two-thirds',
                         attributes: { 'autocomplete' : 'off', 'inputmode' : 'email' },
                         label: {
@@ -37,8 +38,8 @@
 
 
                 {{ radios({
-                    name: 'certificateByEmail',
-                    value: data.certificateByEmail,
+                    name: 'hasEmailAddress',
+                    value: data.hasEmailAddress,
                     fieldset: {
                         legend: {
                         text: 'Do you have an email address?',
