--- a/app/views/v5-enquiry/email-confirmation-EXPEDITE-v3.html
+++ b/app/views/v5-enquiry/email-confirmation-EXPEDITE-v3.html
@@ -14,8 +14,9 @@
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
         
-        <form action="email-EXPEDITE-v3" method="post" novalidate>
+        <form action="email-confirmation-EXPEDITE-v3" method="post" novalidate>
 
+            <span class="nhsuk-caption-m">Your details</span>
             {{ input({
                 label: {
                     text: 'Confirm your email address',
