--- a/app/views/v5-enquiry/enquiry-letter-details.html
+++ b/app/views/v5-enquiry/enquiry-letter-details.html
@@ -114,13 +114,13 @@ Enquiry letter
                       text: 'Email address'
                     },
                     value: {
-                      text: 'Not provided'
+                      text: 'No email address'
                     },
                     actions: {
                       items: [
                         {
                           href: 'email-choice-EXPEDITE-v3',
-                          text: 'Add',
+                          text: 'Change',
                           visuallyHiddenText: 'email address'
                         }
                       ]
