--- a/app/views/v5-enquiry/email-choice-EXPEDITE-v3.html
+++ b/app/views/v5-enquiry/email-choice-EXPEDITE-v3.html
@@ -63,26 +63,30 @@
                 }) }}
 
 
-                {% set detailsHTML %}
+                {% if data.showDetails === 'true' %}
 
-                    <p>We will send you an email if you use this online service to:</p>
-                    <ul class="nshuk-list nhsuk-list-bullet">
-                    {% if data.settings[version].type === 'decs' %}
-                        <li>confirm you were entitled to free NHS prescriptions</li>
-                    {% else %}
-                        <li>confirm you were entitled to free or reduced cost NHS dental treatment</li>
-                    {% endif %}
-                        <li>try to confirm your entitlement but we cannot find your details</li>
-                        <li>accept a penalty charge</li>
-                        <li>make a payment towards a penalty charge</li>
-                    </ul>
+                    {% set detailsHTML %}
 
-                {% endset %}
+                        <p>We will send you an email if you use this online service to:</p>
+                        <ul class="nshuk-list nhsuk-list-bullet">
+                        {% if data.settings[version].type === 'decs' %}
+                            <li>confirm you were entitled to free NHS prescriptions</li>
+                        {% else %}
+                            <li>confirm you were entitled to free or reduced cost NHS dental treatment</li>
+                        {% endif %}
+                            <li>try to confirm your entitlement but we cannot find your details</li>
+                            <li>accept a penalty charge</li>
+                            <li>make a payment towards a penalty charge</li>
+                        </ul>
 
-                {{ details({
-                    text: 'What type of updates will I receive?',
-                    html: detailsHTML
-                }) }}
+                    {% endset %}
+
+                    {{ details({
+                        text: 'What type of updates will I receive?',
+                        html: detailsHTML
+                    }) }}
+
+                {% endif %}
 
 
 
