Changing the email flow based on business decision.

--- a/app/views/v5-enquiry/enquiry-letter-details-decs-EXPEDITE.html
+++ b/app/views/v5-enquiry/enquiry-letter-details-decs-EXPEDITE.html
@@ -73,6 +73,40 @@ Enquiry letter
         </div>
         
       </dl>
+
+
+
+      {% if data.showEmail === 'provided' %}
+        {% set emailValue = data.emailAddress or 'joe.bloggs@hotmail.com' %}
+      {% else %}
+        {% set emailValue = 'No email provided' %}
+      {% endif %}
+
+      <h3>Contact details</h3>
+      {{ summaryList({
+          rows: [
+            {
+              key: {
+                text: 'Email address'
+              },
+              value: {
+                text: emailValue
+              },
+              actions: {
+                items: [
+                  {
+                    href: 'email-change-EXPEDITE-v3',
+                    text: 'Change',
+                    visuallyHiddenText: 'email address'
+                  }
+                ]
+              }
+            }
+          ]
+        }) }}
+    
+
+
       <p>If you were entitled to free or reduced cost NHS dental treatment, answering some questions to confirm this can help us resolve this issue. We can check if you had a valid exemption certificate or qualifying benefit.</p>
       </dl>
     </div>
